# bulatsabirow-test-o-parser

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
src/: manage.py
src/products/: admin.py  fields.py  models.py  permissions.py  querysets.py  serializers.py  tasks.py  urls.py  views.py
src/products/bot/: bot.py
src/products/management/commands/: start_bot.py
src/products/migrations/: 0001_initial.py  0002_auto_20240429_1306.py  0003_auto_20240429_1317.py
src/products/ozon_parser/: driver.py  export.py  parser.py  scraper.py  scrapper.py
src/products/telegram/: bot.py
src/test_o_parser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/users/: models.py
src/users/migrations/: 0001_initial.py
test_o_parser/: settings.py
