[tool.poetry]
name = "bulatsabirow-test-o-parser"
version = "0.1.0"
description = ""
authors = ["bulatsabirow <bulatsabirow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"
djangorestframework = "3.12"
celery = "^5.4.0"
bs4 = "^0.0.2"
drf-yasg = "^1.21.7"
mysqlclient = "^2.2.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
