[tool.poetry]
name = "bulatsabirow-test-o-parser"
version = "0.1.0"
description = ""
authors = ["bulatsabirow <bulatsabirow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"
djangorestframework = "3.12"
celery = "^5.4.0"
bs4 = "^0.0.2"
drf-yasg = "^1.21.7"
mysqlclient = "^2.2.4"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"
lxml = "^5.2.1"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "^3.5.5"
selenium-base = "^4.26.0"
redis = "^5.0.4"
django-admin-adminlte = "^1.0.5"
pytelegrambotapi = "^4.17.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
